# firmware-security-workbench

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  desktop-packages.yml
backend/: __init__.py  app.py
cli/: __init__.py  app.py  cve_engine.py  diff_engine.py  hardening_simulator.py  report_exporter.py  risk_dna.py  rule_engine.py  scanner.py  storage.py
desktop/: package-lock.json  package.json
desktop/app/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  branching-strategy.md  final-roadmap.md  final-showcase.md  glossary.md  learning-path.md  mvp-scope.md  phase-00-foundation.md  phase-01-requirements-prior-art.md  phase-02-cli-scanner-mvp.md  phase-03-format-detection.md  phase-04-storage-layer.md  phase-05-fastapi-backend.md  phase-06-web-dashboard.md  phase-18-desktop-app-shell.md  phase-19-nextgen-ui-packaging.md  prior-art.md  product-requirements.md  project-charter.md  release-plan.md  sample-corpus.md  threat-model.md
frontend/: dashboard.css  dashboard.js  index.html
rules/yara/: fwb_core_rules.yar
samples/: demo-firmware.hex
scripts/: demo-showcase.sh  fwb
tests/: test_api_backend.py  test_cli_scanner.py  test_desktop_shell.py  test_engines.py
