[package]
name = "firmware-security-workbench"
version = "0.5.0"
description = "Firmware Security Workbench desktop shell"
authors = ["Firmware Security Workbench Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "firmware_security_workbench_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
